# oss-lecture-backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  constants.py  convert_pdf.sh  docker-compose.yml  init.sql  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  startup.py
.github/workflows/: ci.yml  deploy_account.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 01842328c25a_update_external_agent_id.py  20fb10f0cbf3_update_chatbot_table.py  2bf0f0114584_update_course_table.py  3c97fcbec3ae_add_notifications_table.py  5266bb36fb1e_add_lti_platforms.py  5456c539496c_create_third_party_integrations_table.py  5e01daebf9b3_update_claude_3_7_sonnet_model.py  6c9fc5098093_update_chatbots_table_with_lti_config.py  7bc0fa4eebdb_add_s3_bucket_configuration_to_admin_.py  9997efa37f8a_add_topics_analysis_related_models.py  9b03a58a4561_initial_migration.py  c994dbd0dd54_add_columns_to_ai_models.py  d9be6249c441_add_table_for_service_tokens.py  f9f6d58893f0_add_columns_to_analytics_table.py
database/: crud.py  db.py  models.py  schemas.py
docs/: aws_bedrock_model_arn_construction.md  lti_integration.md  notifications_system.md
examples/: notification_examples.py  notification_metrics_example.py  notification_with_buttons_example.py
function/content_query/: query_prompt.py  query_utils.py
function/exam_generator/: exam_prompt.py  exam_utils.py
function/image_gen_models/: titan_generator_invoke.py
function/llms/: bedrock_invoke.py  openai_invoke.py
function/podcast_generator/: podcast.py  utils.py
function/rubric/: rubric_prompt.py
function/transcribe/: transcribe_utils.py
interfaces/: __init__.py  ai_interface.py  health_interface.py  html_interface.py  strands_interface.py
lti/: config.py  router.py  secrets.py  services.py  utils.py
lti/templates/: chat.html  deep_link.html  quiz_generator.html
routers/: ai_content.py  analytics.py  auth.py  chatbot.py  compare.py  courses.py  documents.py  evaluations.py  groups.py  guardrails.py  health.py  html_content.py  integrations.py  lti_management.py  notifications.py  podcast.py  service_token.py  topics.py  users.py  websocket.py
services/: __init__.py  ai_service.py  aws_service.py  boto3_alt_generator.py  content_storage_service.py  document_service.py  health_service.py  html_service.py  strands_service.py
tasks/: conversation_topics_task.py  pdf2podcast_task.py
tests/: __init__.py  conftest.py
tests/integration/: test_pdf2podcast_integration.py
utility/: agent_registry.py  analytics.py  async_manager.py  auth.py  aws.py  aws_clients.py  chatbot_processor.py  common.py  decorators.py  exceptions.py  lti_management_utils.py  parameter_store.py  pdf_processor.py  pdf_utils.py  prompt_utility.py  service.py  session.py  ssm_parameter_store.py  tokens.py  topics_utils.py  websocket_manager.py
(+30 files in other folders)
